Create brand repository and service
- recover brand from controller
- check brand exist